# cv_analysis_api

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
initdb/: init.sql
src/: app.py  example.env
src/backend/: api.py  dependencies.py  schema.py
src/config/: config.py  db_config.py
src/modules/: crud.py  db.py  embedder.py  extractor.py  ingestion.py  ingestor.py  models.py  utils.py
