[project]
name = "cv-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "gdown>=5.2.0",
    "google-genai>=1.18.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.62",
    "langchain-google-genai>=2.1.5",
    "pdfplumber>=0.11.6",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.14.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
